--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "torch>=2.6.0",
     "fastapi[standard]>=0.115.12",
     "firebase-admin>=6.7.0",
     "opencv-python>=4.11.0.86",
@@ -14,4 +15,17 @@ dependencies = [
     "ultralytics>=8.3.107",
     "uvicorn>=0.34.0",
     "websockets>=15.0.1",
+    "torchvision>=0.21.0",
+]
+[[tool.uv.index]]
+name = "pytorch-cu126"
+url = "https://download.pytorch.org/whl/cu126"
+explicit = true
+
+[tool.uv.sources]
+torch = [
+    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
+]
+torchvision = [
+    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
 ]
